[workspace]
members = [
    "iota-ledger",
    "iota-ledger-signer",
    "iota-ledger-signer-cli",
    "ledger-transport-tcp",
]
resolver = "3"

[workspace.dependencies]
iota-ledger = { path = "iota-ledger" }
iota-ledger-signer = { path = "iota-ledger-signer" }
ledger-transport-tcp = { path = "ledger-transport-tcp" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "2f502fd8570fe4e9cff36eea5bbd6fef22002898" }
iota-sdk = { git = "https://github.com/iotaledger/iota", package = "iota-sdk" }
iota-types = { git = "https://github.com/iotaledger/iota", package = "iota-types" }
bcs = "0.1.6"