[package]
name = "iota-ledger"
version = "1.0.0"
authors = [ "IOTA Stiftung" ]
edition = "2024"
license = "Apache-2.0"

[dependencies]
log = "0.4.11"
thiserror = "1.0.20"
lazy_static = "1.4.0"
arrayref = "0.3.6"
hex = "0.4"
byteorder = "1.4"

hidapi = { version = "2.4.1", features = ["linux-static-hidraw"], default-features = false }
bip32 = "0.5"
fastcrypto.workspace = true
base64 = "0.22.1"
async-trait = "0.1.61"
ledger-transport = "0.11.0"
ledger-transport-hid = "0.11.0"
ledger-transport-tcp.workspace = true
bcs.workspace = true
iota-types = { git = "https://github.com/iotaledger/iota", package = "iota-types" }
shared-crypto.workspace = true
serde.workspace = true

[dev-dependencies]
clap = "4.5.40"


